@@ -565,7 +565,7 @@ option (above) may be used to override this.
 .BR \-u
 Boolean switch to control uncorrelated random sampling.
 When "off", a low-discrepancy sequence is used, which reduces
-variance but can result in a brushed appearance in specular highlights.
+variance but can result in a dithered appearance in specular highlights.
 When "on", pure Monte Carlo sampling is used in all calculations.
 .TP
 .BI -lr \ N
