@@ -223,6 +223,8 @@ initotypes.o srcobstr.o raytrace.o:	otspecial.h
 rpmain.o rtmain.o rvmain.o rpict.o \
 srcdraw.o:	../common/view.h ../common/resolu.h
 
+rpict.o:	../common/hilbert.h
+
 x11.o x11twind.o: x11twind.h
 
 x11.o:	x11icon.h
